# mc-bridge

./: .envrc.template  .gitignore  Makefile  README.md  mc-bridge.testing.yaml.template  mc_bridge.spec  pyproject.toml
.github/workflows/: release.yml
docs/: bridge-app-blueprint.md  bridge-architecture-research.md
mc_bridge/: __init__.py  app.py  auth.py  certs.py  config.py  models.py  security.py  server.py
mc_bridge/connectors/: __init__.py  base.py  bigquery.py  redshift.py  snowflake.py
mc_bridge/keys/: current.pem
resources/: AppIcon.icns  logo.xcf
scripts/: test_live.py
tests/: test_auth.py  test_certs.py  test_config.py  test_server.py
